# tree-generator

./: .gitignore  CMakeLists.txt  TreeGenerator.sln  doxyfile  readme.txt
Release/: readme.txt
Release/2011/: treegenerator.mll
Release/2012/: treegenerator.mll  treegeneratorGUI.mel
Release/2014/: treegeneratorGUI.mel
Release/2020/: TreeGenerator.mll
Release/Sample Leaf Textures/.mayaSwatches/: 03.png.swatch
Release/Tree Presets/: MediumpolyTree.mel
TreeGenerator/: TreeGenerator.vcxproj  TreeGenerator.vcxproj.filters  common.h  float3.h  global.h  matrix.h  randomGenerator.h  treeGeneratorGUI.cpp  treeGeneratorGUI.h  treeHelpers.h  treegenerator.cpp  treegenerator.h  treegeneratorGUI.mel  treegenerator_components.h
TreeGenerator/Debugx64/: vc120.idb
TreeGenerator/Debugx64/TreeGenerator.tlog/: CL.read.1.tlog  CL.write.1.tlog  TreeGenerator.lastbuildstate  TreeGenerator.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TreeGenerator/Releasex64/treegenerator.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  treegenerator.lastbuildstate  treegenerator.write.1u.tlog
release/2014/: TreeGenerator.mll
release2/2017/: TreeGenerator.mll
release2/2018/: TreeGenerator.mll
release2/Tree Presets/: HighpolyTree.mel  LowpolyTree.mel  TwistedTree.mel
src/: CMakeLists.txt  common.h  matrix.h  pluginEntry.cpp  randomGenerator.cpp  treeComponents.h  treeGenerator.cpp  treeGenerator.h  treeGeneratorGUI.cpp  treeGeneratorGUI.h  vector3.h
